[package]
name = "heave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
minijinja = "1.0.12"
openapiv3 = "2.0.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
