[package]
name = "heave"
version = "0.13.1"
edition = "2021"
repository = "https://github.com/PatOConnor43/heave"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.12.1"
minijinja = "1.0.12"
openapiv3 = "2.0.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
thiserror = "1.0.57"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# CI backends to support
ci = "github"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

[workspace.metadata.release]
allow-branch = ["master"]
publish = false
pre-release-commit-message = "Release version {{version}}"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml", "glob"] }
